--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             display: flex;
             justify-content: center;
             align-items: flex-start;
-            min-height: 100vh;
+            min-height: 90vh;
         }
 
         .container {
             background: var(--light);
             border-radius: 8px;
-            padding: 30px; /* Increased padding */
+            padding: 50px; /* Increased padding */
             width: 100%;
             max-width: 550px; /* Slightly wider */
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
@@ -127,9 +127,9 @@
 <body>
     <!-- Rest of the HTML remains identical to previous version -->
     <div class="container">
-        <h1><i class="fas fa-keyboard"></i> Secure Input Box</h1>
+        <h1><i class="fas fa-keyboard"></i> Input Box</h1>
         
-        <textarea class="input-box" id="inputData" placeholder="Type or paste sensitive text here..."></textarea>
+        <textarea class="input-box" id="inputData" placeholder="Type or paste text here..."></textarea>
         
         <div class="buttons">
             <button class="btn btn-space" onclick="insertText(' ')">
